created personal recipe folder and html page

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My First Webpage</title>
+        <title>Burmese Chicken Curry Recipe</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Burmese Chicken Curry Recipe</h1>
     </body>
 </html>
