added chicken curry image in chicken-curry-recip.html

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Burmese Chicken Curry Recipe</h1>
+        <img src="chicken-curry.jpeg" alt="Chicken Curry Photo" width="280">
+
     </body>
 </html>
