--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -7,6 +7,11 @@
     <body>
         <h1>Burmese Chicken Curry Recipe</h1>
         <img src="chicken-curry.jpeg" alt="Chicken Curry Photo" width="280">
+        <h2>Description</h2>
+        <p>This classic Burmese chicken curry recipe makes a fragrant gently-spiced curry
+             that is perfumed with turmeric, ginger, garlic, chilli, and lemongrass. A rich curry with a moreish
+              tomato-based gravy and a layer of aromatic oil that’s quickly soaked up by coconut rice, 
+              it should be served with zingy salads and a relish or two.</p>
 
     </body>
 </html>
