changed the description of the chicken curry

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -8,10 +8,9 @@
         <h1>Burmese Chicken Curry Recipe</h1>
         <img src="chicken-curry.jpeg" alt="Chicken Curry Photo" width="280">
         <h2>Description</h2>
-        <p>This classic Burmese chicken curry recipe makes a fragrant gently-spiced curry
-             that is perfumed with turmeric, ginger, garlic, chilli, and lemongrass. A rich curry with a moreish
-              tomato-based gravy and a layer of aromatic oil that’s quickly soaked up by coconut rice, 
-              it should be served with zingy salads and a relish or two.</p>
+        
+        <p>Experience the rich and aromatic flavors of Burma with this traditional Burmese-style chicken curry. Tender pieces of chicken are slow-cooked in a fragrant blend of spices, including turmeric, garlic, and ginger, creating a beautifully golden curry that’s both comforting and flavorful. The dish is enhanced with the subtle sweetness of onions and tomatoes, balanced by the warmth of cumin and coriander. Served over steamed rice, this curry offers a delightful taste of Myanmar's culinary heritage, perfect for a cozy meal at home or a special gathering.</p>
+        
 
     </body>
 </html>
