--- a/recipes/beef-curry.html
+++ b/recipes/beef-curry.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Burmese Beef Curry Recipe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Burmese Beef Curry Recipe</h1>
@@ -13,7 +14,6 @@
         <h2>Ingredients</h2>
         
         <h2>Instructions</h2>
-          
 
     </body>
 </html>
