--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Burmese Chicken Curry Recipe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Burmese Chicken Curry Recipe</h1>
+        <h1 id="title">Burmese Chicken Curry Recipe</h1>
         <img src="chicken-curry.jpeg" alt="Chicken Curry Photo" width="280">
         <h2>Description</h2>
         
