--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <a href="../index.html">Main Menu</a>
         <h1 id="title">Burmese Chicken Curry Recipe</h1>
         <img src="chicken-curry.jpeg" alt="Chicken Curry Photo" width="280">
         <h2>Description</h2>
